# cpp_dev_container

./: .gitignore  Dockerfile  README.md  conanfile.py
.devcontainer/: CMakeLists.txt  devcontainer.json
.devcontainer/src/: cpp_0001.cpp  helloworld
